kubernetes/infrastructure/overlays/test/config/ingress-routes/env-var.yaml
varReference:
  - path: spec/routes/match  # Specifies where the variable should be substituted
    kind: IngressRoute
