kubernetes/infrastructure/overlays/test/config/ingress-routes/kustomization.yaml
---
resources:
  - traefik-ir.yaml

secretGenerator:
  - name: dashboard
    files:
      - match=../secrets/config-map-traefik.enc.yaml
    behavior: replace
