kubernetes/infrastructure/overlays/test/config/ingress-routes/traefik-ir.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  annotations:
  namespace: traefik
spec:
  entryPoints:
    - websecure
  tls:
    secretName: traefik-dashboard-cert
  routes:
    - kind: Rule
      match: {{ .Values.host }}
      services:
        - name: api@internal
          kind: TraefikService
    - kind: Rule
      match: {{ .Values.host &&  PathPrefix("/api") }} 
      services:
        - name: api@internal
          kind: TraefikService
